--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -2,7 +2,10 @@ name: Telegram Notification Push
 
 # 要在什麼時候觸發，實測只設定 push 沒有限定更細的 type 或條件時，
 # 新增 tag、設定 release 等活動都會觸發
-on: push
+on:
+  push:
+    branches:
+      - main # 或是你用於部署的分支
 
 # 設定 job 的內容
 jobs:
