--- a/package.json
+++ b/package.json
@@ -13,5 +13,15 @@
     "nuxt": "^3.15.4",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@element-plus/nuxt": "^1.1.1",
+    "@unocss/nuxt": "^66.1.0-beta.3",
+    "@unocss/transformer-directives": "^66.1.0-beta.3",
+    "@unocss/transformer-variant-group": "^66.1.0-beta.3",
+    "nuxt-font-loader": "^2.3.5",
+    "prettier": "^3.5.3",
+    "sass": "^1.85.1",
+    "unocss": "^66.1.0-beta.3"
   }
 }
