--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -9,28 +9,38 @@ on:
 
 # 設定 job 的內容
 jobs:
-  bulid:
-    # 被觸發後，點進上面的名稱後，這邊的名稱會顯示在流程頁面中
-    name: Build
+  deploy:
     # action 執行的環境
     runs-on: ubuntu-latest
     steps:
-      # 再點入上面的流程看詳細執行狀況時，會顯示下面的名字
-      - name: send message on push
-        # 使用這個專案已經寫好的 action
-        uses: appleboy/telegram-action@master
-        with:
-          # 將剛剛拿到的參數帶入，讓流程能夠正確將訊息發到指定的聊天室
-          to: ${{ secrets.ID }}
-          token: ${{ secrets.TOKEN }}
-          # 設定要發出的訊息格式，以下是參考原始 repo 後稍微改寫的設定
-          # github.actor: 觸發 event 的使用者名稱
-          # github.sha: commit 的 hash 值
-          # github.event.commits[0].message: commit message
-          # github.repository: repository 的名稱
-          message: |
-            ${{ github.actor }} created commit: 
-            Commit message: ${{ github.event.commits[0].message }}
-            Repository: ${{ github.repository }}
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-            https://github.com/${{ github.repository }}/commit/${{github.sha}}
+      - name: Setup SSH
+        run: |
+          mkdir -p ~/.ssh
+          ssh-keyscan -H "${{ secrets.VPS_IP }}" >> ~/.ssh/known_hosts
+
+      - name: Get latest commit message
+        id: get_commit
+        run: echo "COMMIT_MSG=$(git log -1 --pretty=format:'%s')" >> $GITHUB_ENV
+        shell: bash
+        continue-on-error: false
+
+      - name: Deploy to VPS
+        run: |
+          sshpass -p "${{ secrets.VPS_PASSWORD }}" ssh -o StrictHostKeyChecking=no xin@"${{ secrets.VPS_IP }}" "
+            cd '${{ secrets.REPO_DIR_PATH }}' &&
+            git pull --rebase --autostash &&
+            git checkout -- . &&
+            docker-compose -f docker-compose.prod.yml up -d --build
+          "
+
+      - name: Call TG Bot
+        env:
+          COMMIT_MSG: ${{ env.COMMIT_MSG }}
+        run: |
+          curl -X POST \
+          -H 'Content-Type: application/json' \
+          -d "{\"chat_id\": \"${{ secrets.ID }}\", \"text\": \"部屬成功至\\nhttp://see-all.com.tw:3104\\nCommit 訊息:\\n${COMMIT_MSG}\", \"disable_notification\": false}" \
+          https://api.telegram.org/bot${{ secrets.TOKEN }}/sendMessage
